update folder structure and platformio.ini file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
-.pio
+# clang intellisense
 .clang_complete
+
+# ignore directories
+.directory
+.svn
+.vscode
+.*/
+**/release
+**/build/*
+Deviot/
+
+# ignore files
+*.patch
+*.o
+deviot.*
+
+# include makefiles
+!Makefile
+!makefile
+!*.mk
+!*.make
+!build/Makefile
+!build/makefile
+!build/*.mk
+!build/*.make
+
+# ignore sublime cache
+Package Control*
+PythonTestRunner*
+Preferences.sublime-settings
+
