--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+src_dir = ./
+lib_dir = ../
+
 [env:teensylc]
 platform = teensy
 board = teensylc
